# allocators

./: .editorconfig  .gitignore  CMakeLists.txt  main.c
include/: libmem.h
include/allocators/: allocator.h  arena_allocator.h  c_allocator.h  direct_allocator.h  fixed_buffer_allocator.h  synchronized_allocator.h
src/: allocator.c  arena_allocator.c  c_allocator.c  direct_allocator.c  fixed_buffer_allocator.c  libmem.c  macros.h  sem.c  sem.h  synchronized_allocator.c
